--- a/FORMULARIO_SOLO/form.html
+++ b/FORMULARIO_SOLO/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FORMULARIO SOLO</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1 id="title">freeCodeCamp Survey Form</h1>
