tributo messi casi

--- a/tributo/tributo.html
+++ b/tributo/tributo.html
@@ -17,6 +17,15 @@
       
         <p class="definicion">MESSI en su gol 700 contra el real madrid</p>
       </figure>
-      <h1 class="estadisticas">Records que Messi tiene en toda su historia en el futbol</h1>
+      <section>
+      <h1 class="estadisticas">Records que Messi tiene en toda su historia en el futbol:</h1>
+      <ul class="stats">
+        <li><label><span>Máximo goleador </span>en un mismo club</label></li>
+        <li><label><span>Máximo goleador </span>sudamericano</label></li>
+        <li><label><span>Máximo goleador </span>en fase de grupos</label></li>
+        <li><label><span>Máximo goleador </span>en octavos de final</label></li>
+      </ul>
+      </section>
+      
     </main>
   </body>
