--- a/tributo/tributo.html
+++ b/tributo/tributo.html
@@ -24,8 +24,18 @@
         <li><label><span>Máximo goleador </span>sudamericano</label></li>
         <li><label><span>Máximo goleador </span>en fase de grupos</label></li>
         <li><label><span>Máximo goleador </span>en octavos de final</label></li>
+        <li><label><span>Máximo goleador </span>en octavos de final</label></li>
+        <li><label><span>Máximo goleador </span>en un partido eliminatorio</label></li>
+        <li><label><span>Mayor cantidad de hat-tricks </span>en la Liga de Campeones de la UEFA</label></li>
+        <li><label><span>Jugador no europeo </span>con más partidos en la Liga de Campeones de la UEFA</label></li>
+        
       </ul>
       </section>
-      
+      <div class="texto">
+      <h3>
+       si tu deseas leer mas sobre messi, clickea 
+        <a id="tribute-link" href="https://es.wikipedia.org/wiki/Anexo:R%C3%A9cords_de_Lionel_Messi#:~:text=Jugador%20con%20m%C3%A1s%20temporadas%20consecutivas%20marcando%20gol%20en%20la%20Liga,UEFA%20(2007%2F2019)." target="_blank">aqui</a> para tener mas informacion.
+      </h3>
+      </div>
     </main>
   </body>
