--- a/DOCUMENTACION/doc.html
+++ b/DOCUMENTACION/doc.html
@@ -1,49 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>THE WALKING DEAD</title>
-  
-    <link rel="stylesheet" media="only screen and (max-width: 1000px)" href="styles.css">
-    <link rel="stylesheet" href="./styles.css">
-    </head>
-  <body>
-    <nav id="navbar">
-      <header id="titulo">The Walking Dead</header>
-      <ul>
-        <li><a class="nav-link" href="#Informacion">Informacion</a></li>
-        <li><a class="nav-link" href="#2">2</a></li>
-        <li><a class="nav-link" href="#3">3</a></li>
-        <li><a class="nav-link" href="#4">4</a></li>
-        <li><a class="nav-link" href="#5">5</a></li>
-   
-      </ul>
-    </nav>
-    <main id="main-doc">
-      <section class="main-section" id="Informacion"><header>Informacion</header><p>La serie se estreno en 2008</p>
 
-      </section>
-            <section class="main-section" id="2"><header>2</header></section>
-                  <section class="main-section" id="3"><header>3</header></section>
-                        <section class="main-section" id="4"><header>4
-                          </header>
-                          <code>12+3</code>
-                          <code>12+3</code>
-                          <code>12+3</code>
-                          <code>12+3</code>
-                          <code>12+3</code>
-                          <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"/>
-                          </section>
-                              <section class="main-section" id="5"><header>5</header>
-                              <ul>
-                                <li>1</li>
-                                    <li>1</li>
-                                        <li>1</li>
-                                            <li>1</li>
-                                                <li>1</li>
-                              </ul>
-                              </section>
-    </main>
-  </body>
-    
-  <html>
+<head>
+  <meta charset="UTF-8" />
+  <title>THE WALKING DEAD</title>
+
+  <link rel="stylesheet" media="only screen and (max-width: 1000px)" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
+</head>
+
+<body>
+  <nav id="navbar">
+    <header id="titulo">The Walking Dead</header>
+    <ul>
+      <li><a class="nav-link" href="#Informacion">Informacion</a></li>
+      <li><a class="nav-link" href="#Resumen">Resumen</a></li>
+      <li><a class="nav-link" href="#3">3</a></li>
+      <li><a class="nav-link" href="#4">4</a></li>
+      <li><a class="nav-link" href="#5">5</a></li>
+
+    </ul>
+  </nav>
+  <main id="main-doc">
+    <section class="main-section" id="Informacion">
+      <header>
+        Informacion
+      </header>
+      <p>
+        Es una serie de televisión estadounidense de horror posapocalíptico de AMC basada en la serie de cómics homónima
+        de Robert Kirkman, Tony Moore y Charlie Adlard. La serie presenta un gran elenco como sobrevivientes de un
+        apocalipsis zombi, tratando de mantenerse con vida bajo la amenaza casi constante de ataques de los zombis sin
+        conciencia, coloquialmente conocidos como «caminantes». Sin embargo, con la caída de la humanidad, estos
+        sobrevivientes también enfrentan conflictos con otros sobrevivientes que han formado grupos y comunidades con
+        sus propios conjuntos de leyes y morales, lo que a menudo conduce a conflictos hostiles entre las comunidades
+        humanas
+      </p>
+      <p>
+        Andrew Lincoln interpretó al personaje principal de la serie, Rick Grimes, hasta su partida durante la novena
+        temporada. Otros miembros del elenco de larga data son Norman Reedus, Melissa McBride, Lauren Cohan, Danai
+        Gurira, Chandler Riggs, Steven Yeun, Christian Serratos, Josh McDermitt, Seth Gilliam, Ross Marquand y Jeffrey
+        Dean Morgan. The Walking Dead es producida por AMC Studios en el estado de Georgia y la mayoría de las
+        filmaciones tienen lugar en los grandes espacios al aire libre de Riverwood Studios, cerca de Senoia (Georgia).
+        Fue adaptada del cómic por Frank Darabont, quien también fue el showrunner de la primera temporada. Sin embargo,
+        conflictos entre Darabont y AMC forzaron su salida de la serie, que actualmente está sujeta a múltiples demandas
+        por parte de Darabont y otros. Después de Darabont, Glen Mazzara, Scott M. Gimple y Angela Kang han servido como
+        showrunners.</p>
+
+    </section>
+    <section class="main-section" id="Resumen">
+      <header>Resumen</header>
+      <p>The Walking Dead tiene lugar después del inicio de un apocalipsis zombi mundial. Los zombis, coloquialmente
+        llamados «caminantes», se arrastran hacia los humanos vivos y otras criaturas para comerlos; se sienten atraídos
+        por el ruido, como los disparos, y por diferentes aromas, por ejemplo humanos. Aunque inicialmente parece que
+        solo los humanos que son mordidos o arañados por los caminantes pueden convertirse en otros caminantes, se
+        revela al principio de la serie que todos los humanos vivos portan el patógeno responsable de la mutación. La
+        mutación se activa después de la muerte del huésped del patógeno, y la única forma de matar permanentemente a un
+        caminante es dañar su cerebro o destruir el cuerpo, como incinerándolo.</p>
+
+      <table class="tabla1">
+        <tbody id="body">
+          <tr>
+            <td>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <h1>EMISION ORIGINAL</h1>
+      <table id="table1">
+        <tbody>
+          <tr id="titulo1">
+            <td class="titulos1">Temporada.</td>
+            <td class="titulos1">Episodios</td>
+            <td class="titulos1">Primera Emision</td>
+            <td class="titulos1">Ultima Emision</td>
+
+          </tr>
+          <tr class="temp1">
+            <td id="textos">1</td>
+            <td id="textos">6 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp2">
+            <td id="textos">2</td>
+            <td id="textos">13 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp1">
+            <td id="textos">3</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp2">
+            <td id="textos">4</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp1">
+            <td id="textos">5</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp2">
+            <td id="textos">6</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp1">
+            <td id="textos">7</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp2">
+            <td id="textos">8</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp1">
+            <td id="textos">9</td>
+            <td id="textos">16 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp2">
+            <td id="textos">10</td>
+            <td id="textos">22</td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+          <tr class="temp1">
+            <td id="textos">11</td>
+            <td id="textos">26 </td>
+            <td id="textos">adsf</td>
+            <td id="textos">adsf</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section class="main-section" id="3">
+      <header>3</header>
+    </section>
+    <section class="main-section" id="4">
+      <header>4
+      </header>
+      <code>12+3</code>
+      <code>12+3</code>
+      <code>12+3</code>
+      <code>12+3</code>
+      <code>12+3</code>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" />
+    </section>
+    <section class="main-section" id="5">
+      <header>5</header>
+      <ul>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+        <li>1</li>
+      </ul>
+    </section>
+  </main>
+</body>
+
+<html>
