--- a/pinguino/main.html
+++ b/pinguino/main.html
@@ -11,6 +11,7 @@
     <div class="left-mountain"></div>
     <div class="back-mountain"></div>
     <div class="sun"></div>
+    <img  class="huggy" src="https://m.media-amazon.com/images/I/61DWk-muiML._AC_SL1500_.jpg"/>
     <div class="penguin">
       <div class="penguin-head">
         <div class="face left"></div>
