--- a/pinguino/main.html
+++ b/pinguino/main.html
@@ -12,6 +12,7 @@
     <div class="back-mountain"></div>
     <div class="sun"></div>
     <img  class="huggy" src="https://m.media-amazon.com/images/I/61DWk-muiML._AC_SL1500_.jpg"/>
+    <img class="mommy" src="https://i.pinimg.com/originals/2a/37/7a/2a377aacd2af7bb9df885394bb1d85f6.jpg"/>
     <div class="penguin">
       <div class="penguin-head">
         <div class="face left"></div>
